// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarNavigation ACT theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root makeStyles-appBarRoot-1 makeStyles-appBarRoot-3 MuiAppBar-positionStatic MuiAppBar-colorTransparent MuiPaper-elevation4"
  >
    <img
      alt="Logo"
      aria-label="Logo"
      class="makeStyles-logoImg-4"
    />
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-navContainer-2 MuiGrid-spacing-xs-4"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-navLink-7 MuiTypography-colorPrimary"
          to="#"
        >
          <p
            class="MuiTypography-root makeStyles-navTypography-8 makeStyles-navTypography-9 MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-navLink-7 MuiTypography-colorPrimary"
          to="#"
        >
          <p
            class="MuiTypography-root makeStyles-navTypography-8 makeStyles-navTypography-10 MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ACT_ET theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root makeStyles-appBarRoot-11 makeStyles-appBarRoot-13 MuiAppBar-positionStatic MuiAppBar-colorTransparent MuiPaper-elevation4"
  >
    <img
      alt="Logo"
      aria-label="Logo"
      class="makeStyles-logoImg-14"
    />
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-navContainer-12 MuiGrid-spacing-xs-4"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-navLink-17 MuiTypography-colorPrimary"
          to="#"
        >
          <p
            class="MuiTypography-root makeStyles-navTypography-18 makeStyles-navTypography-19 MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-navLink-17 MuiTypography-colorPrimary"
          to="#"
        >
          <p
            class="MuiTypography-root makeStyles-navTypography-18 makeStyles-navTypography-20 MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;
